# idoru-protocol

./: .env.example  .eslintrc.json  .gitignore  CONTRIBUTING.md  DEPRECATION.md  LICENSE  README.md  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
assets/: logo.txt
contracts/: AgentIdentityV2.sol  CreditEngine.sol  PaymentGatewayV2.sol  ReputationGraph.sol  ValidatorMarket.sol  WorkReceiptV2.sol
contracts/test/: EasMock.sol  TestToken.sol
docs/: ARCHITECTURE_DIAGRAM.md  DEPLOYMENT_GUIDE.md  PROTOCOL_OVERVIEW.md  README.md
facilitator/: batchSettler.ts  easRelay.ts  server.ts  x402.ts
idoru_protocol/: README.md  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
idoru_protocol/archive/: README.md
idoru_protocol/archive/pre-mark2/rust/: Cargo.toml
idoru_protocol/archive/pre-mark2/rust/src/: lib.rs  main.rs
idoru_protocol/archive/pre-mark2/rust/src/bridge/: mod.rs
idoru_protocol/archive/pre-mark2/rust/src/core/: agent.rs
idoru_protocol/archive/pre-mark2/rust/src/network/: app.rs
idoru_protocol/archive/pre-mark2/rust/src/protocol/: mod.rs  swarm.rs
idoru_protocol/cache/: solidity-files-cache.json
idoru_protocol/contracts/: AgentIdentityV2.sol  CreditEngine.sol  PaymentGatewayV2.sol  ReputationGraph.sol  ValidatorMarket.sol  WorkReceiptV2.sol
idoru_protocol/docs/: DEPLOYMENT_GUIDE.md  (+3 more)
scripts/: 00_deploy.ts  01_register_agent.ts  02_demo_payment.ts  03_emit_receipt.ts  04_run_attestation.ts
test/: gateway.test.ts  identity.test.ts  receipt.test.ts  refund.test.ts  validator.test.ts
(+96 files in other folders)
