[package]
name = "idoru_protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
reqwest = "0.11"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
eframe = "0.27"
egui = "0.27"
serde_json = "1.0" 